--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Interactive_Kymograph.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Interactive_Kymograph.ipynb
@@ -8,6 +8,7 @@
     "\n",
     "Use this notebook to figure out the kymograph hyperparameters that are most appropriate for your dataset.\n",
     "\n",
+    "Still produces slightly different results than the main code...in the future should try to merge classes somehow...\n",
     "\n",
     "Maybe add some writing to file so I can pick up from where I left off?"
    ]
@@ -105,8 +106,8 @@
     "kymo = tr.interactive.kymograph_interactive(\n",
     "    input_path_prefix,\n",
     "    [\"channel_RFP\"],\n",
-    "    [10, 20, 60, 79],\n",
-    "    t_subsample_step=5,\n",
+    "    [1],\n",
+    "    t_subsample_step=10,\n",
     "    orientation_detection=\"phase\",\n",
     ")\n",
     "imported_array_list = kymo.map_to_fovs(kymo.import_hdf5)\n",
@@ -249,6 +250,7 @@
     "    padding_y=IntSlider(value=20, min=0, max=100, step=1),\n",
     "    trench_len_y=IntSlider(value=270, min=0, max=1000, step=10),\n",
     "    vertical_spacing=FloatSlider(value=0.9, min=0.0, max=2.0, step=0.01),\n",
+    "    expected_num_rows=IntText(value=2, description=\"Number of Rows:\", disabled=False),\n",
     "    orientation_detection=Dropdown(\n",
     "        options=[0, 1, \"phase\"], value=0, description=\"Orientation:\", disabled=False\n",
     "    ),\n",
