--- a/paulssonlab/src/paulssonlab/eaton/trenchripper/Cluster_Notebook.ipynb
+++ b/paulssonlab/src/paulssonlab/eaton/trenchripper/Cluster_Notebook.ipynb
@@ -73,8 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fov_list = list(range(0, 80))\n",
-    "# fov_list = list(range(16)) + list(range(29,40))"
+    "fov_list = list(range(0, 80))"
    ]
   },
   {
@@ -92,7 +91,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hdf5_extractor.writemetadata()\n",
     "kymo_controller.mapfovs(hdf5_extractor.extract_fov, fov_list)"
    ]
   },
@@ -112,7 +110,7 @@
    "outputs": [],
    "source": [
     "# hdf5_extractor.writemetadata()\n",
-    "# hdf5_extractor.extract_fov(0)"
+    "hdf5_extractor.extract_fov(57)"
    ]
   },
   {
@@ -231,6 +229,7 @@
     "    smoothing_kernel_y=(17, 1),\n",
     "    triangle_nbins=50,\n",
     "    triangle_scaling=1.60,\n",
+    "    expected_num_rows=2,\n",
     "    orientation_detection=0,\n",
     "    x_percentile=95,\n",
     "    background_kernel_x=(21, 1),\n",
@@ -257,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kymo_controller.mapfovs(kymo.generate_kymograph, fov_list)"
+    "kymo_controller.mapfovs(kymo.generate_kymograph, fov_list, retries=1)"
    ]
   },
   {
@@ -279,6 +278,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymo.collect_metadata(fov_list, use_archive=True, overwrite_archive=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -291,7 +299,269 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kymo.generate_kymograph(40)"
+    "kymo.generate_kymograph(57)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import h5py\n",
+    "from matplotlib import pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for fov in fov_list:\n",
+    "for fov in [12, 63]:\n",
+    "    print(fov)\n",
+    "    with h5py.File(\n",
+    "        \"/n/scratch2/de64/full_pipeline_test/hdf5/fov_\" + str(fov) + \".hdf5\"\n",
+    "    ) as testfile:\n",
+    "        data = testfile[\"channel_RFP\"]\n",
+    "        arr = data[:, :, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meta_handle = tr.utils.pandas_hdf5_handler(\n",
+    "    \"/n/scratch2/de64/full_pipeline_test/metadata.hdf5\"\n",
+    ")\n",
+    "kymo_meta = meta_handle.read_df(\"kymo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymo_meta[kymo_meta[\"fov\"] == 5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import h5py\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "h5py_handle = h5py.File(\"/n/scratch2/de64/full_pipeline_test/kymo/kymo_5.hdf5\", \"r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = h5py_handle[\"0/channel_RFP\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = data[:, :, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5py_handle.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"moo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(h5py_handle[\"0/channel_RFP\"][0, :, :, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5py_handle[\"0/channel_RFP\"].chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymo_handle = tr.utils.kymo_handle()\n",
+    "kymo_handle.import_wrap(h5py_handle[\"0/channel_RFP\"][39])\n",
+    "plt.imshow(kymo_handle.return_unwrap())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate Segmentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Start Dask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymo_controller = tr.cluster.dask_controller(\n",
+    "    walltime=\"01:00:00\", local=False, n_workers=80, memory=\"1GB\"\n",
+    ")\n",
+    "kymo_controller.startdask()\n",
+    "kymo_controller.daskcluster.start_workers()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymo_controller.daskclient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymo_controller.daskclient.restart()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "segment = tr.segment.fluo_segmentation_cluster(\n",
+    "    \"/n/scratch2/de64/full_pipeline_test\",\n",
+    "    \"channel_RFP\",\n",
+    "    smooth_sigma=0.75,\n",
+    "    wrap_pad=3,\n",
+    "    hess_pad=4,\n",
+    "    min_obj_size=30,\n",
+    "    cell_mask_method=\"local\",\n",
+    "    cell_otsu_scaling=1.0,\n",
+    "    local_otsu_r=15,\n",
+    "    edge_threshold_scaling=1.0,\n",
+    "    threshold_range=20,\n",
+    "    threshold_step=10,\n",
+    "    convex_threshold=0.8,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fov_list = list(set(range(0, 80)) - set([77]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymo_controller.mapfovs(segment.generate_segmentation, fov_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### End Dask, Cancel Jobs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymo_controller.shutdown()"
    ]
   },
   {
@@ -317,7 +587,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = h5py.File(\"/n/scratch2/de64/full_pipeline_test/kymo/kymo_0.hdf5\")"
+    "data = h5py.File(\"/n/scratch2/de64/full_pipeline_test/segmentation/seg_0.hdf5\")"
    ]
   },
   {
@@ -335,16 +605,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kymo_handle.import_wrap(data[\"0/channel_BF\"][10])\n",
+    "kymo_handle.import_wrap(data[\"0\"][30])\n",
     "plt.imshow(kymo_handle.return_unwrap())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
