--- a/paulssonlab/src/paulssonlab/eaton/trenchripper/fluorescence_seg_final.ipynb
+++ b/paulssonlab/src/paulssonlab/eaton/trenchripper/fluorescence_seg_final.ipynb
@@ -20,11 +20,27 @@
     "import h5py\n",
     "from matplotlib import pyplot as plt\n",
     "import skimage.filters\n",
-    "from skimage import measure, feature, segmentation, future, util\n",
+    "from skimage import measure, feature, segmentation, future, util, morphology\n",
     "from skimage.filters import threshold_otsu, threshold_niblack, rank\n",
     "from skimage.morphology import disk\n",
     "from scipy import ndimage"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sk.morphology.disk()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -51,7 +67,10 @@
     "        wrap_pad=3,\n",
     "        hess_pad=4,\n",
     "        min_obj_size=30,\n",
+    "        cell_mask_method=\"global\",\n",
+    "        cell_otsu_scaling=1.0,\n",
     "        local_otsu_r=15,\n",
+    "        edge_threshold_scaling=1.0,\n",
     "        threshold_range=20,\n",
     "        threshold_step=5,\n",
     "        convex_threshold=0.8,\n",
@@ -65,7 +84,10 @@
     "        self.wrap_pad = wrap_pad\n",
     "        self.hess_pad = hess_pad\n",
     "        self.min_obj_size = min_obj_size\n",
+    "        self.cell_mask_method = cell_mask_method\n",
+    "        self.cell_otsu_scaling = cell_otsu_scaling\n",
     "        self.local_otsu_r = local_otsu_r\n",
+    "        self.edge_threshold_scaling = edge_threshold_scaling\n",
     "        self.threshold_range = threshold_range\n",
     "        self.threshold_step = threshold_step\n",
     "        self.convex_threshold = convex_threshold\n",
@@ -85,6 +107,48 @@
     "        )\n",
     "        return img_smooth\n",
     "\n",
+    "    def cell_region_mask(\n",
+    "        self, img_arr, method=\"global\", cell_otsu_scaling=1.0, t_tot=0, local_otsu_r=15\n",
+    "    ):\n",
+    "        if method == \"global\":  ###Maybe combinw with mid_threshold class\n",
+    "            img_kymo = tr.utils.kymo_handle()\n",
+    "            img_kymo.import_unwrap(img_arr, t_tot)\n",
+    "            wrap_img = img_kymo.return_wrap()\n",
+    "\n",
+    "            cell_threshold_kymo = []\n",
+    "            for t in range(t_tot):\n",
+    "                cell_threshold = (\n",
+    "                    sk.filters.threshold_otsu(wrap_img[:, :, t]) * cell_otsu_scaling\n",
+    "                )\n",
+    "                cell_thr_arr = cell_threshold * np.ones(\n",
+    "                    wrap_img[:, :, t].shape, dtype=\"uint8\"\n",
+    "                )\n",
+    "                cell_threshold_kymo.append(cell_thr_arr)\n",
+    "            cell_threshold_kymo = np.array(cell_threshold_kymo)\n",
+    "            cell_threshold_kymo = np.moveaxis(cell_threshold_kymo, (0, 1, 2), (2, 0, 1))\n",
+    "\n",
+    "            thr_kymo = tr.utils.kymo_handle()\n",
+    "            thr_kymo.import_wrap(cell_threshold_kymo)\n",
+    "            final_cell_mask = img_arr > thr_kymo.return_unwrap()\n",
+    "\n",
+    "        elif method == \"local\":\n",
+    "            otsu_selem = disk(local_otsu_r)\n",
+    "            local_otsu = rank.otsu(img_arr, otsu_selem)\n",
+    "            cell_local_mask = img_arr > local_otsu\n",
+    "            del img_arr\n",
+    "\n",
+    "            cell_region_threshold = sk.filters.threshold_otsu(local_otsu)\n",
+    "            cell_region_mask = local_otsu > cell_region_threshold\n",
+    "            del local_otsu\n",
+    "\n",
+    "            final_cell_mask = cell_local_mask * cell_region_mask\n",
+    "            del cell_region_mask\n",
+    "\n",
+    "        else:\n",
+    "            print(\"no valid cell threshold method chosen!!!\")\n",
+    "\n",
+    "        return final_cell_mask\n",
+    "\n",
     "    def hessian_contrast_enc(self, img_arr, edge_padding=0):\n",
     "        img_arr = np.pad(img_arr, edge_padding, \"reflect\")\n",
     "        hessian = sk.feature.hessian_matrix(img_arr, order=\"rc\")\n",
@@ -98,7 +162,6 @@
     "\n",
     "    def find_mask(self, cell_local_mask, min_eigvals, edge_threshold, min_size=30):\n",
     "        edge_mask = min_eigvals > edge_threshold\n",
-    "        edge_mask = sk.morphology.binary_closing(edge_mask)\n",
     "        composite_mask = cell_local_mask * edge_mask\n",
     "        composite_mask = sk.morphology.remove_small_objects(\n",
     "            composite_mask, min_size=min_size\n",
@@ -149,7 +212,7 @@
     "            weight_arr[obj_mask] = obj_weight\n",
     "        return weight_arr\n",
     "\n",
-    "    def get_mid_threshold_arr(self, wrap_eig, padding=3):\n",
+    "    def get_mid_threshold_arr(self, wrap_eig, edge_threshold_scaling=1.0, padding=3):\n",
     "        edge_threshold_kymo = []\n",
     "        for t in range(wrap_eig.shape[-1]):\n",
     "            edge_threshold = sk.filters.threshold_otsu(wrap_eig[:, :, t])\n",
@@ -157,7 +220,7 @@
     "                wrap_eig[:, :, t].shape, dtype=\"uint8\"\n",
     "            )\n",
     "            edge_threshold_kymo.append(edge_thr_arr)\n",
-    "        edge_threshold_kymo = np.array(edge_threshold_kymo)\n",
+    "        edge_threshold_kymo = np.array(edge_threshold_kymo) * edge_threshold_scaling\n",
     "        edge_threshold_kymo = np.moveaxis(edge_threshold_kymo, (0, 1, 2), (2, 0, 1))\n",
     "\n",
     "        edge_thr_kymo = tr.utils.kymo_handle()\n",
@@ -167,7 +230,7 @@
     "\n",
     "    def get_convex_scores(\n",
     "        self,\n",
-    "        cell_local_mask,\n",
+    "        cell_mask,\n",
     "        min_eigvals,\n",
     "        mid_threshold_arr,\n",
     "        threshold_range=20,\n",
@@ -180,7 +243,7 @@
     "        weight_arrs = []\n",
     "        for edge_threshold in edge_thresholds:\n",
     "            composite_mask = self.find_mask(\n",
-    "                cell_local_mask, min_eigvals, edge_threshold, min_size=30\n",
+    "                cell_mask, min_eigvals, edge_threshold, min_size=30\n",
     "            )\n",
     "            conn_comp = sk.measure.label(composite_mask, neighbors=4, connectivity=2)\n",
     "            weights = self.get_image_weights(conn_comp)\n",
@@ -204,31 +267,32 @@
     "        min_eigvals = self.to_8bit(self.hessian_contrast_enc(inverted, self.hess_pad))\n",
     "        del inverted\n",
     "\n",
-    "        otsu_selem = disk(self.local_otsu_r)\n",
-    "        local_otsu = rank.otsu(working_img, otsu_selem)\n",
-    "        cell_local_mask = working_img > local_otsu\n",
-    "        del working_img\n",
-    "\n",
-    "        cell_region_threshold = sk.filters.threshold_otsu(local_otsu)\n",
-    "        cell_region_mask = local_otsu > cell_region_threshold\n",
-    "        del local_otsu\n",
-    "        cell_local_mask = cell_local_mask * cell_region_mask\n",
-    "        del cell_region_mask\n",
+    "        cell_mask = self.cell_region_mask(\n",
+    "            working_img,\n",
+    "            method=self.cell_mask_method,\n",
+    "            cell_otsu_scaling=self.cell_otsu_scaling,\n",
+    "            t_tot=t_tot,\n",
+    "            local_otsu_r=self.local_otsu_r,\n",
+    "        )\n",
     "\n",
     "        eig_kymo = tr.utils.kymo_handle()\n",
     "        eig_kymo.import_unwrap(min_eigvals, t_tot, padding=self.wrap_pad)\n",
     "        wrap_eig = eig_kymo.return_wrap()\n",
-    "        mid_threshold_arr = self.get_mid_threshold_arr(wrap_eig, padding=self.wrap_pad)\n",
+    "        mid_threshold_arr = self.get_mid_threshold_arr(\n",
+    "            wrap_eig,\n",
+    "            edge_threshold_scaling=self.edge_threshold_scaling,\n",
+    "            padding=self.wrap_pad,\n",
+    "        )\n",
     "        del wrap_eig\n",
     "\n",
     "        convex_scores = self.get_convex_scores(\n",
-    "            cell_local_mask,\n",
+    "            cell_mask,\n",
     "            min_eigvals,\n",
     "            mid_threshold_arr,\n",
     "            threshold_range=self.threshold_range,\n",
     "            threshold_step=self.threshold_step,\n",
     "        )\n",
-    "        del cell_local_mask\n",
+    "        del cell_mask\n",
     "        del min_eigvals\n",
     "        del mid_threshold_arr\n",
     "\n",
@@ -245,8 +309,6 @@
     "        segmented = np.array(segmented)\n",
     "        segmented = np.moveaxis(segmented, (0, 1, 2), (2, 0, 1))\n",
     "        return segmented\n",
-    "\n",
-    "    #     def segment_fov(self,)\n",
     "\n",
     "    def init_fov_number(self, fov_number):\n",
     "        self.fov_number = fov_number\n",
@@ -291,7 +353,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "array = data[\"top/channel_RFP/11\"]"
+    "lane_data = data[\"top/channel_RFP\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array = data[\"bottom/channel_RFP/40\"]"
    ]
   },
   {
@@ -329,32 +407,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seg = fluo_segmentation(\"\", \"\", [\"channel_RFP\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_out = seg.segment(array)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext memory_profiler"
+    "seg = fluo_segmentation(\n",
+    "    \"\",\n",
+    "    \"\",\n",
+    "    [\"channel_RFP\"],\n",
+    "    smooth_sigma=0.75,\n",
+    "    wrap_pad=3,\n",
+    "    hess_pad=4,\n",
+    "    min_obj_size=30,\n",
+    "    cell_mask_method=\"local\",\n",
+    "    cell_otsu_scaling=1.0,\n",
+    "    local_otsu_r=15,\n",
+    "    edge_threshold_scaling=1.0,\n",
+    "    threshold_range=20,\n",
+    "    threshold_step=10,\n",
+    "    convex_threshold=0.8,\n",
+    ")"
    ]
   },
   {
@@ -363,7 +431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%memit segment(array,threshold_range=20,threshold_step=10,convex_threshold=0.8)"
+    "test_out = seg.segment(array[:])"
    ]
   },
   {
@@ -376,7 +444,13 @@
     "plt.show()\n",
     "output_kymo = tr.utils.kymo_handle()\n",
     "output_kymo.import_wrap(test_out)\n",
-    "plt.imshow(output_kymo.return_unwrap())\n",
+    "plt.imshow((output_kymo.return_unwrap() > 0))\n",
+    "plt.show()\n",
+    "plt.imshow((output_kymo.return_unwrap() > 0) * input_kymo.return_unwrap())\n",
+    "plt.show()\n",
+    "plt.imshow((output_kymo.return_unwrap()[200:, :200]))\n",
+    "plt.show()\n",
+    "plt.imshow(output_kymo.return_unwrap()[200:, -400:])\n",
     "plt.show()"
    ]
   },
@@ -386,7 +460,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "working_img = preprocess_img(input_kymo.return_unwrap(padding=3), sigma=0.75)\n",
+    "working_img = seg.preprocess_img(input_kymo.return_unwrap(padding=3), sigma=0.75)\n",
     "plt.imshow(working_img)\n",
     "plt.show()"
    ]
@@ -398,7 +472,7 @@
    "outputs": [],
    "source": [
     "inverted = sk.util.invert(working_img)\n",
-    "min_eigvals = to_8bit(hessian_contrast_enc(inverted, 4))\n",
+    "min_eigvals = seg.to_8bit(seg.hessian_contrast_enc(inverted, 4))\n",
     "plt.imshow(min_eigvals)\n",
     "\n",
     "plt.show()"
@@ -410,7 +484,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eig_kymo = kymo_handle()\n",
+    "eig_kymo = tr.utils.kymo_handle()\n",
     "eig_kymo.import_unwrap(min_eigvals, 25, padding=3)\n",
     "wrap_eig = eig_kymo.return_wrap()\n",
     "plt.imshow(wrap_eig[:, :, 23])\n",
@@ -435,12 +509,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "thr = 140\n",
+    "thr = 129\n",
     "test = wrap_eig[:, :, 24] > thr\n",
     "plt.imshow(test)\n",
     "plt.show()\n",
-    "for i in range(2):\n",
-    "    test = sk.morphology.binary_closing(test)\n",
+    "test = sk.morphology.remove_small_holes(test)\n",
     "plt.imshow(test)\n",
     "plt.show()"
    ]
@@ -459,7 +532,7 @@
     "edge_threshold_kymo = np.array(edge_threshold_kymo)\n",
     "edge_threshold_kymo = np.moveaxis(edge_threshold_kymo, (0, 1, 2), (2, 0, 1))\n",
     "\n",
-    "edge_thr_kymo = kymo_handle()\n",
+    "edge_thr_kymo = tr.utils.kymo_handle()\n",
     "edge_thr_kymo.import_wrap(edge_threshold_kymo, scale=False)\n",
     "edge_mask = min_eigvals > edge_thr_kymo.return_unwrap(padding=3)\n",
     "plt.imshow(edge_mask)\n",
@@ -504,6 +577,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "img_kymo = tr.utils.kymo_handle()\n",
+    "img_kymo.import_unwrap(working_img, 25)\n",
+    "wrap_img = img_kymo.return_wrap()\n",
+    "\n",
+    "otsu_scaling = 1.0\n",
+    "\n",
+    "cell_threshold_kymo = []\n",
+    "for t in range(25):\n",
+    "    cell_threshold = sk.filters.threshold_otsu(wrap_img[:, :, t]) * otsu_scaling\n",
+    "    cell_thr_arr = cell_threshold * np.ones(wrap_img[:, :, t].shape, dtype=\"uint8\")\n",
+    "    cell_threshold_kymo.append(cell_thr_arr)\n",
+    "cell_threshold_kymo = np.array(cell_threshold_kymo)\n",
+    "cell_threshold_kymo = np.moveaxis(cell_threshold_kymo, (0, 1, 2), (2, 0, 1))\n",
+    "\n",
+    "thr_kymo = tr.utils.kymo_handle()\n",
+    "thr_kymo.import_wrap(cell_threshold_kymo)\n",
+    "\n",
+    "img_mask = working_img > thr_kymo.return_unwrap()\n",
+    "\n",
+    "plt.imshow(thr_img)\n",
+    "plt.show()\n",
+    "plt.imshow(img_mask)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_kymo.import_unwrap(working_img, 25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_mask = img_mask * edge_mask\n",
+    "test_mask = sk.morphology.remove_small_objects(test_mask, min_size=30)\n",
+    "test_mask = sk.morphology.remove_small_holes(test_mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(test_mask)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "composite_mask = cell_local_mask * edge_mask\n",
     "composite_mask = sk.morphology.remove_small_objects(composite_mask, min_size=30)\n",
     "composite_mask = sk.morphology.remove_small_holes(composite_mask)"
@@ -525,7 +659,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "score_img = get_convex_scores(\n",
+    "score_img = seg.get_convex_scores(\n",
     "    cell_local_mask,\n",
     "    min_eigvals,\n",
     "    edge_thr_kymo.return_unwrap(padding=3),\n",
