--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Cluster_Notebook.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Cluster_Notebook.ipynb
@@ -19,6 +19,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!sbatch -p transfer -t 0-12:00 --wrap=\"rsync -r /n/files/SysBio/PAULSSON\\ LAB/Daniel/Image_Data/Bacillus_Project/2019-05-10_bacillus_training_data /n/scratch2/de64/2019-05-10_bacillus_training_data/\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -61,10 +70,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# hdf5_extractor = tr.ndextract.hdf5_fov_extractor(\"/n/scratch2/de64/full_pipeline_test/40x_Ph2_Test_1.5.nd2\",\"/n/scratch2/de64/full_pipeline_test\")\n",
     "hdf5_extractor = tr.ndextract.hdf5_fov_extractor(\n",
-    "    \"/n/scratch2/de64/full_pipeline_test/40x_Ph2_Test_1.5.nd2\",\n",
-    "    \"/n/scratch2/de64/full_pipeline_test\",\n",
-    ")  ##find a more elegent way to do grids...."
+    "    \"/n/scratch2/de64/2019-05-10_bacillus_training_data/ChannelPhase,RFP_Seq0000.nd2\",\n",
+    "    \"/n/scratch2/de64/2019-05-10_bacillus_training_data\",\n",
+    ")"
    ]
   },
   {
@@ -73,7 +83,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fov_list = list(range(0, 80))"
+    "hdf5_extractor.fov_metadata[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fov_list = list(range(0, 40))"
    ]
   },
   {
@@ -92,6 +111,15 @@
    "outputs": [],
    "source": [
     "kymo_controller.mapfovs(hdf5_extractor.extract_fov, fov_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymo_controller.retry_failed()"
    ]
   },
   {
@@ -196,23 +224,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# input_file_prefix = '/n/scratch2/de64/for_sylvia/timelapse/hdf5/fov_'\n",
-    "# output_path = '/n/scratch2/de64/for_sylvia/timelapse/kymo'\n",
-    "# all_channels = [\"channel_Phase\"]\n",
-    "\n",
-    "# kymo = tr.kymograph.kychunker(input_file_prefix=input_file_prefix,output_path=output_path,all_channels=all_channels,trench_len_y=110,padding_y=20,trench_width_x=20,\\\n",
-    "#                  t_chunk=25,t_range=(0,400),y_percentile=90,y_min_edge_dist=50,smoothing_kernel_y=(17,1),triangle_nbins=50,triangle_scaling=1.2,\\\n",
-    "#                  top_orientation=0,x_percentile=85,background_kernel_x=(301,1),smoothing_kernel_x=(9,1),otsu_nbins=50,otsu_scaling=0.7)\n",
-    "\n",
-    "# input_file_prefix = \"/n/scratch2/de64/full_pipeline_test/hdf5/fov_\"\n",
-    "# output_path = '/n/scratch2/de64/full_pipeline_test/kymo'\n",
-    "# all_channels = [\"channel_BF\",\"channel_RFP\"]\n",
-    "\n",
-    "# kymo = tr.kymograph.kychunker(input_file_prefix=input_file_prefix,output_path=output_path,all_channels=all_channels,trench_len_y=110,padding_y=20,trench_width_x=20,\\\n",
-    "#                  t_chunk=25,t_range=(0,-1),y_percentile=90,y_min_edge_dist=50,smoothing_kernel_y=(17,1),triangle_nbins=50,triangle_scaling=1.2,\\\n",
-    "#                  orientation_detection='phase',x_percentile=85,background_kernel_x=(301,1),smoothing_kernel_x=(9,1),otsu_nbins=50,otsu_scaling=0.7)\n",
-    "\n",
-    "\n",
     "headpath = \"/n/scratch2/de64/full_pipeline_test\"\n",
     "all_channels = [\"channel_RFP\", \"channel_BF\"]\n",
     "\n",
@@ -225,7 +236,7 @@
     "    t_chunk=25,\n",
     "    t_range=(0, -1),\n",
     "    y_percentile=90,\n",
-    "    y_min_edge_dist=50,\n",
+    "    y_min_edge_dist=80,\n",
     "    smoothing_kernel_y=(17, 1),\n",
     "    triangle_nbins=50,\n",
     "    triangle_scaling=1.60,\n",
@@ -549,6 +560,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "segment.generate_segmentation(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymo_controller.daskclient.get_futures_error(kymo_controller.futures[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -727,310 +763,13 @@
     "- for both, note x positions of t=0 trenches\n",
     "- compare these values to map trenches to eachother..."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import h5py\n",
-    "from matplotlib import pyplot as plt\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.array([1, 2])[:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h5py_handle = h5py.File(\"/n/scratch2/de64/for_sylvia/timelapse/kymo/kymo_10.hdf5\", \"r\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list(h5py_handle.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "top = h5py_handle[\"1/channel_Phase\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# top = h5py_handle[\"channel_Phase\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "top"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plt.imshow(top[50,:,:,20])\n",
-    "tr.tplot.plot_kymograph(top[10, :, :, 0:20])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test_fn():\n",
-    "    h5py_handle = h5py.File(\n",
-    "        \"/n/scratch2/de64/for_sylvia/timelapse/hdf5/fov_0.hdf5\", \"r\"\n",
-    "    )\n",
-    "    top = h5py_handle[\"channel_Phase\"]\n",
-    "    test = top[:, :, 0:50]\n",
-    "    output2 = np.percentile(test, 85, axis=1, interpolation=\"lower\")\n",
-    "    output3 = np.percentile(test, 85, axis=1, interpolation=\"higher\")\n",
-    "    output4 = np.percentile(test, 85, axis=1, interpolation=\"linear\")\n",
-    "    h5py_handle.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext line_profiler\n",
-    "%lprun -f test_fn test_fn()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h5py_handle = h5py.File(\"/n/scratch2/de64/for_sylvia/timelapse/hdf5/fov_0.hdf5\", \"r\")\n",
-    "top = h5py_handle[\"channel_Phase\"]\n",
-    "slc = [slice(None)] * len(top.shape)\n",
-    "slc[2] = slice(0, 50)\n",
-    "print(slc)\n",
-    "test = top[tuple(slc)]\n",
-    "h5py_handle.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h5py_handle = h5py.File(\"/n/scratch2/de64/for_sylvia/timelapse/hdf5/fov_0.hdf5\", \"r\")\n",
-    "top = h5py_handle[\"channel_Phase\"]\n",
-    "test = top[:, :, range(0, 50)]\n",
-    "h5py_handle.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h5py_handle = h5py.File(\"/n/scratch2/de64/for_sylvia/timelapse/hdf5/fov_0.hdf5\", \"r\")\n",
-    "top = h5py_handle[\"channel_Phase\"]\n",
-    "test = top[:, :, list(range(0, 50))]\n",
-    "h5py_handle.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h5py_handle = h5py.File(\"/n/scratch2/de64/for_sylvia/timelapse/hdf5/fov_0.hdf5\", \"r\")\n",
-    "top = h5py_handle[\"channel_Phase\"]\n",
-    "test = np.take(top, list(range(0, 50)), axis=2)\n",
-    "h5py_handle.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.take(\n",
-    "    h5py_handle[\"channel_Phase\"], [1, 2, 3, 4, 5], axis=2\n",
-    ")  ##this operation is killing me"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h5py_handle[\"channel_Phase\"][:, :, :20].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h5py_handle.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h5py_handle[\"1/channel_YFP\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h5py_handle.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "testlist = [\"success\"]\n",
-    "potato = \"fail\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test(potato, testlist):\n",
-    "    exec(\"potato = testlist\")\n",
-    "    return potato"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test(potato, [\"moo\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "potato"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h5py_handle = h5py.File(\"/n/scratch2/de64/for_sylvia/timelapse/hdf5/fov_0.hdf5\", \"r\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h5py_handle[\"channel_Phase\"].chunks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h5py_handle[\"channel_Phase\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target[slc]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mothermachine",
    "language": "python",
-   "name": "python3"
+   "name": "mothermachine"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1042,7 +781,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
