--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Interactive_Kymograph.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Interactive_Kymograph.ipynb
@@ -48,26 +48,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import h5py\n",
-    "import numpy as np\n",
-    "import time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "time.time()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -106,8 +86,8 @@
     "kymo = tr.interactive.kymograph_interactive(\n",
     "    input_path_prefix,\n",
     "    [\"channel_RFP\"],\n",
-    "    [1],\n",
-    "    t_subsample_step=10,\n",
+    "    [1, 77],\n",
+    "    t_subsample_step=5,\n",
     "    orientation_detection=\"phase\",\n",
     ")\n",
     "imported_array_list = kymo.map_to_fovs(kymo.import_hdf5)\n",
@@ -115,6 +95,23 @@
     "# input_path_prefix = '/n/scratch2/de64/for_sylvia/timelapse/hdf5/fov_'\n",
     "# kymo = tr.interactive.kymograph_interactive(input_path_prefix,[\"channel_Phase\"],[16,70],t_subsample_step=20,t_range=(0,100))\n",
     "# imported_array_list = kymo.map_to_fovs(kymo.import_hdf5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_path_prefix = \"/n/scratch2/de64/2019-05-10_bacillus_training_data/hdf5/fov_\"\n",
+    "kymo = tr.interactive.kymograph_interactive(\n",
+    "    input_path_prefix,\n",
+    "    [\"channel_RFP\"],\n",
+    "    [1, 30],\n",
+    "    t_subsample_step=10,\n",
+    "    orientation_detection=0,\n",
+    ")\n",
+    "imported_array_list = kymo.map_to_fovs(kymo.import_hdf5)"
    ]
   },
   {
@@ -466,9 +463,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mothermachine",
    "language": "python",
-   "name": "python3"
+   "name": "mothermachine"
   },
   "language_info": {
    "codemirror_mode": {
@@ -480,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
