Pushed interactive fluorescence segmentation jupyter notebook.

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Cluster_Notebook.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Cluster_Notebook.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sbatch -p transfer -t 0-12:00 --wrap=\"rsync -r /n/files/SysBio/PAULSSON\\ LAB/Daniel/Image_Data/Bacillus_Project/2019-05-10_bacillus_training_data /n/scratch2/de64/2019-05-10_bacillus_training_data/\""
+    "!sbatch -p transfer -t 0-12:00 --wrap=\"rsync -r /n/files/SysBio/PAULSSON\\ LAB/Daniel/Image_Data/Bacillus_Project/2019-05-13_bacillus_training_data/ /n/scratch2/de64/2019-05-13_bacillus_training_data\""
    ]
   },
   {
@@ -72,8 +72,8 @@
    "source": [
     "# hdf5_extractor = tr.ndextract.hdf5_fov_extractor(\"/n/scratch2/de64/full_pipeline_test/40x_Ph2_Test_1.5.nd2\",\"/n/scratch2/de64/full_pipeline_test\")\n",
     "hdf5_extractor = tr.ndextract.hdf5_fov_extractor(\n",
-    "    \"/n/scratch2/de64/2019-05-10_bacillus_training_data/ChannelPhase,RFP_Seq0000.nd2\",\n",
-    "    \"/n/scratch2/de64/2019-05-10_bacillus_training_data\",\n",
+    "    \"/n/scratch2/de64/2019-05-13_bacillus_training_data/NDExp_Seq0000.nd2\",\n",
+    "    \"/n/scratch2/de64/2019-05-13_bacillus_training_data\",\n",
     ")"
    ]
   },
@@ -84,6 +84,15 @@
    "outputs": [],
    "source": [
     "hdf5_extractor.fov_metadata[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(hdf5_extractor.exp_metadata[\"fields_of_view\"])"
    ]
   },
   {
@@ -128,6 +137,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "kymo_controller.retry_processing()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# props = kymo_controller.daskclient.gather(kymo_controller.futures) #this will hang until all futures are done"
    ]
   },
@@ -138,7 +156,7 @@
    "outputs": [],
    "source": [
     "# hdf5_extractor.writemetadata()\n",
-    "hdf5_extractor.extract_fov(57)"
+    "hdf5_extractor.extract_fov(4)"
    ]
   },
   {
@@ -224,29 +242,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "headpath = \"/n/scratch2/de64/full_pipeline_test\"\n",
-    "all_channels = [\"channel_RFP\", \"channel_BF\"]\n",
+    "kymo_controller.daskclient.restart()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# headpath = \"/n/scratch2/de64/full_pipeline_test\"\n",
+    "# all_channels = [\"channel_RFP\",\"channel_BF\"]\n",
+    "\n",
+    "# kymo = tr.kymograph.kychunker(headpath=headpath,all_channels=all_channels,trench_len_y=270,padding_y=40,trench_width_x=30,\\\n",
+    "#                  t_chunk=25,t_range=(0,-1),y_percentile=90,y_min_edge_dist=80,smoothing_kernel_y=(17,1),triangle_nbins=50,triangle_scaling=1.60,\\\n",
+    "#                  expected_num_rows=2,orientation_detection=0,x_percentile=95,background_kernel_x=(21,1),smoothing_kernel_x=(9,1),otsu_nbins=50,otsu_scaling=0.7)\n",
+    "\n",
+    "\n",
+    "headpath = \"/n/scratch2/de64/2019-05-13_bacillus_training_data/\"\n",
+    "all_channels = [\"channel_RFP\", \"channel_Phase\"]\n",
     "\n",
     "kymo = tr.kymograph.kychunker(\n",
     "    headpath=headpath,\n",
     "    all_channels=all_channels,\n",
-    "    trench_len_y=270,\n",
-    "    padding_y=40,\n",
-    "    trench_width_x=30,\n",
-    "    t_chunk=25,\n",
+    "    trench_len_y=200,\n",
+    "    padding_y=20,\n",
+    "    trench_width_x=20,\n",
+    "    t_chunk=100,\n",
     "    t_range=(0, -1),\n",
-    "    y_percentile=90,\n",
+    "    y_percentile=60,\n",
     "    y_min_edge_dist=80,\n",
     "    smoothing_kernel_y=(17, 1),\n",
     "    triangle_nbins=50,\n",
-    "    triangle_scaling=1.60,\n",
+    "    triangle_scaling=1.1,\n",
     "    expected_num_rows=2,\n",
     "    orientation_detection=0,\n",
-    "    x_percentile=95,\n",
+    "    orientation_on_fail=1,\n",
+    "    x_percentile=99,\n",
     "    background_kernel_x=(21, 1),\n",
     "    smoothing_kernel_x=(9, 1),\n",
     "    otsu_nbins=50,\n",
-    "    otsu_scaling=0.7,\n",
+    "    otsu_scaling=0.25,\n",
     ")"
    ]
   },
@@ -256,9 +292,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fov_list = list(range(15)) + list(range(67,80))\n",
-    "# fov_list = list(range(20)) + list(range(60,80))\n",
-    "fov_list = list(range(0, 80))"
+    "# Y Percentile 60\n",
+    "# Y Smoothing Kernel 17\n",
+    "# Triangle Trheshold Bins 50\n",
+    "# Triangle Threshold Scaling 1.1\n",
+    "# Minimum Trench Length 50\n",
+    "# Y Padding 20\n",
+    "# Trench Length 200\n",
+    "# Orientation Detection Method 0\n",
+    "# Expected Number of Rows (Manual Orientation Detection) 2\n",
+    "# Top Orientation when Row Drifts Out (Manual Orientation Detection) 0\n",
+    "# X Percentile 99\n",
+    "# X Background Kernel 21\n",
+    "# X Smoothing Kernel 9\n",
+    "# Otsu Trheshold Bins 50\n",
+    "# Otsu Threshold Scaling 0.33\n",
+    "# Trench Width 26"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fov_list = list(range(0,80))\n",
+    "fov_list = list(range(0, 40))"
    ]
   },
   {
@@ -310,7 +369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kymo.generate_kymograph(57)"
+    "kymo.generate_kymograph(0)"
    ]
   },
   {
@@ -354,6 +413,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
+    "arr = np.array([1, 2, 3, 4])\n",
+    "arr[np.array([0, 2, 3])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd"
    ]
   },
@@ -364,9 +435,9 @@
    "outputs": [],
    "source": [
     "meta_handle = tr.utils.pandas_hdf5_handler(\n",
-    "    \"/n/scratch2/de64/full_pipeline_test/metadata.hdf5\"\n",
+    "    \"/n/scratch2/de64/2019-05-10_bacillus_training_data/metadata.hdf5\"\n",
     ")\n",
-    "kymo_meta = meta_handle.read_df(\"kymo\")"
+    "global_meta = meta_handle.read_df(\"global\", read_metadata=True)"
    ]
   },
   {
@@ -375,91 +446,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kymo_meta[kymo_meta[\"fov\"] == 5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import h5py\n",
-    "from matplotlib import pyplot as plt\n",
-    "\n",
-    "h5py_handle = h5py.File(\"/n/scratch2/de64/full_pipeline_test/kymo/kymo_5.hdf5\", \"r\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = h5py_handle[\"0/channel_RFP\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.chunks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arr = data[:, :, 0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h5py_handle.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"moo\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(h5py_handle[\"0/channel_RFP\"][0, :, :, 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h5py_handle[\"0/channel_RFP\"].chunks"
+    "global_meta.metadata"
    ]
   },
   {
@@ -524,8 +511,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# segment = tr.segment.fluo_segmentation_cluster(\"/n/scratch2/de64/full_pipeline_test\",\"channel_RFP\",smooth_sigma=0.75,wrap_pad=3,hess_pad=4,min_obj_size=30,cell_mask_method='local',\\\n",
+    "#                  cell_otsu_scaling=1.,local_otsu_r=15,edge_threshold_scaling=1.,threshold_range=20,threshold_step=10,convex_threshold=0.8)\n",
     "segment = tr.segment.fluo_segmentation_cluster(\n",
-    "    \"/n/scratch2/de64/full_pipeline_test\",\n",
+    "    \"/n/scratch2/de64/2019-05-10_bacillus_training_data/\",\n",
     "    \"channel_RFP\",\n",
     "    smooth_sigma=0.75,\n",
     "    wrap_pad=3,\n",
@@ -547,7 +536,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fov_list = list(set(range(0, 80)) - set([77]))"
+    "# fov_list = list(set(range(0,80))-set([77]))\n",
+    "fov_list = list(set(range(0, 40)) - set([34, 35, 36, 37, 38, 39, 9, 10, 11, 17]))"
    ]
   },
   {
@@ -614,7 +604,9 @@
    "outputs": [],
    "source": [
     "import h5py\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "import numpy as np\n",
+    "import skimage as sk"
    ]
   },
   {
@@ -623,7 +615,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = h5py.File(\"/n/scratch2/de64/full_pipeline_test/segmentation/seg_0.hdf5\")"
+    "data = h5py.File(\"/n/scratch2/de64/2019-05-10_bacillus_training_data/hdf5/fov_1.hdf5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array = data[\"channel_RFP\"][:, :, 10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(array.flatten(), bins=100)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(array[470:500, 175:190])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array[470:500, 175:190]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.percentile(data[\"channel_RFP\"][:, :, 0], 90)"
    ]
   },
   {
@@ -641,7 +679,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kymo_handle.import_wrap(data[\"0\"][30])\n",
+    "list(data.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymo_handle.import_wrap(data[\"19\"])\n",
     "plt.imshow(kymo_handle.return_unwrap())"
    ]
   },
