--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Interactive_Kymograph.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Interactive_Kymograph.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Use this notebook to figure out the kymograph hyperparameters that are most appropriate for your dataset.\n",
     "\n",
-    "Still produces slightly different results than the main code...in the future should try to merge classes somehow...\n",
+    "In the future should try to merge classes somehow...\n",
     "\n",
     "Maybe add some writing to file so I can pick up from where I left off?"
    ]
@@ -81,37 +81,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_path_prefix = \"/n/scratch2/de64/full_pipeline_test/hdf5/fov_\"\n",
-    "# kymo = tr.interactive.kymograph_interactive(input_path_prefix,[\"channel_BF\",\"channel_RFP\"],[12,45],t_subsample_step=5)\n",
+    "headpath = \"/n/scratch2/de64/2019-05-13_bacillus_training_data\"\n",
     "kymo = tr.interactive.kymograph_interactive(\n",
-    "    input_path_prefix,\n",
-    "    [\"channel_RFP\"],\n",
-    "    [1, 77],\n",
-    "    t_subsample_step=5,\n",
-    "    orientation_detection=\"phase\",\n",
+    "    headpath, [\"channel_RFP\"], [0, 1, 23], t_subsample_step=10\n",
     ")\n",
     "imported_array_list = kymo.map_to_fovs(kymo.import_hdf5)\n",
+    "\n",
+    "# input_path_prefix = '/n/scratch2/de64/full_pipeline_test/hdf5/fov_'\n",
+    "# # kymo = tr.interactive.kymograph_interactive(input_path_prefix,[\"channel_BF\",\"channel_RFP\"],[12,45],t_subsample_step=5)\n",
+    "# kymo = tr.interactive.kymograph_interactive(input_path_prefix,[\"channel_RFP\"],[1,77],t_subsample_step=5,orientation_detection='phase')\n",
+    "# imported_array_list = kymo.map_to_fovs(kymo.import_hdf5)\n",
     "\n",
     "# input_path_prefix = '/n/scratch2/de64/for_sylvia/timelapse/hdf5/fov_'\n",
     "# kymo = tr.interactive.kymograph_interactive(input_path_prefix,[\"channel_Phase\"],[16,70],t_subsample_step=20,t_range=(0,100))\n",
     "# imported_array_list = kymo.map_to_fovs(kymo.import_hdf5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_path_prefix = \"/n/scratch2/de64/2019-05-10_bacillus_training_data/hdf5/fov_\"\n",
-    "kymo = tr.interactive.kymograph_interactive(\n",
-    "    input_path_prefix,\n",
-    "    [\"channel_RFP\"],\n",
-    "    [1, 30],\n",
-    "    t_subsample_step=10,\n",
-    "    orientation_detection=0,\n",
-    ")\n",
-    "imported_array_list = kymo.map_to_fovs(kymo.import_hdf5)"
    ]
   },
   {
@@ -250,6 +233,12 @@
     "    expected_num_rows=IntText(value=2, description=\"Number of Rows:\", disabled=False),\n",
     "    orientation_detection=Dropdown(\n",
     "        options=[0, 1, \"phase\"], value=0, description=\"Orientation:\", disabled=False\n",
+    "    ),\n",
+    "    orientation_on_fail=Dropdown(\n",
+    "        options=[None, 0, 1],\n",
+    "        value=0,\n",
+    "        description=\"Orientation when < expected rows:\",\n",
+    "        disabled=False,\n",
     "    ),\n",
     ")\n",
     "display(y_cropping)"
@@ -451,6 +440,15 @@
     "    trench_width_x=IntSlider(value=30, min=10, max=50, step=1),\n",
     "    vertical_spacing=FloatSlider(value=0.8, min=0.0, max=2.0, step=0.01),\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymo.print_results()"
    ]
   },
   {
